--- a/docs-ui/src/app/components/avatar/page.mdx
+++ b/docs-ui/src/app/components/avatar/page.mdx
@@ -36,13 +36,7 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
 
 Avatar sizes can be set using the `size` prop.
 
-<Snippet
-  align="center"
-  py={4}
-  open
-  preview={<Sizes />}
-  code={sizesSnippet}
-/>
+<Snippet align="center" py={4} open preview={<Sizes />} code={sizesSnippet} />
 
 ### Fallback
 
@@ -60,12 +54,7 @@ If the image is not available, the avatar will show the initials of the name.
 
 Control how the avatar is announced to screen readers using the `purpose` prop.
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Purpose />}
-  code={purposeSnippet}
-/>
+<Snippet align="center" py={4} preview={<Purpose />} code={purposeSnippet} />
 
 <Theming definition={AvatarDefinition} />
 
