--- a/docs-ui/src/app/components/button-link/page.mdx
+++ b/docs-ui/src/app/components/button-link/page.mdx
@@ -20,12 +20,7 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
   description="A button component that can be used as a link."
 />
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Variants />}
-  code={variantsSnippet}
-/>
+<Snippet align="center" py={4} preview={<Variants />} code={variantsSnippet} />
 
 ## Usage
 
@@ -53,13 +48,7 @@ Here's a view when buttons have different variants.
 
 Here's a view when buttons have different sizes.
 
-<Snippet
-  align="center"
-  py={4}
-  open
-  preview={<Sizes />}
-  code={sizesSnippet}
-/>
+<Snippet align="center" py={4} open preview={<Sizes />} code={sizesSnippet} />
 
 ### With Icons
 
