--- a/docs-ui/src/app/components/card/page.mdx
+++ b/docs-ui/src/app/components/card/page.mdx
@@ -24,12 +24,7 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
   description="A card component that can be used to display content in a box."
 />
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Default />}
-  code={defaultSnippet}
-/>
+<Snippet align="center" py={4} preview={<Default />} code={defaultSnippet} />
 
 ## Usage
 
