--- a/docs-ui/src/app/components/dialog/page.mdx
+++ b/docs-ui/src/app/components/dialog/page.mdx
@@ -1,7 +1,11 @@
 import { PropsTable } from '@/components/PropsTable';
 import { Snippet } from '@/components/Snippet';
 import { CodeBlock } from '@/components/CodeBlock';
-import { Default, PreviewFixedWidthAndHeight, PreviewWithForm } from './components';
+import {
+  Default,
+  PreviewFixedWidthAndHeight,
+  PreviewWithForm,
+} from './components';
 import {
   dialogPropDefs,
   dialogTriggerPropDefs,
