--- a/docs-ui/src/app/components/link/page.mdx
+++ b/docs-ui/src/app/components/link/page.mdx
@@ -10,7 +10,13 @@ import {
   allColorsSnippet,
   underlineSnippet,
 } from './snippets';
-import { Default, ExternalLink, AllVariants, AllColors, Underline } from './components';
+import {
+  Default,
+  ExternalLink,
+  AllVariants,
+  AllColors,
+  Underline,
+} from './components';
 import { PageTitle } from '@/components/PageTitle';
 import { Theming } from '@/components/Theming';
 import { ChangelogComponent } from '@/components/ChangelogComponent';
