--- a/docs-ui/src/app/components/password-field/page.mdx
+++ b/docs-ui/src/app/components/password-field/page.mdx
@@ -19,7 +19,12 @@ import { PasswordFieldDefinition } from '../../../utils/definitions';
   description="A password field component for your forms."
 />
 
-<Snippet align="center" py={4} preview={<WithLabel />} code={withLabelSnippet} />
+<Snippet
+  align="center"
+  py={4}
+  preview={<WithLabel />}
+  code={withLabelSnippet}
+/>
 
 ## Usage
 
@@ -35,13 +40,7 @@ import { PasswordFieldDefinition } from '../../../utils/definitions';
 
 We support two different sizes: `small`, `medium`.
 
-<Snippet
-  align="center"
-  py={4}
-  open
-  preview={<Sizes />}
-  code={sizesSnippet}
-/>
+<Snippet align="center" py={4} open preview={<Sizes />} code={sizesSnippet} />
 
 ### With description
 
