--- a/docs-ui/src/app/components/popover/page.mdx
+++ b/docs-ui/src/app/components/popover/page.mdx
@@ -14,12 +14,7 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
   description="A popover displays floating content anchored to a trigger element with automatic positioning and collision detection."
 />
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Default />}
-  code={defaultSnippet}
-/>
+<Snippet align="center" py={4} preview={<Default />} code={defaultSnippet} />
 
 ## Usage
 
