--- a/docs-ui/src/app/components/radio-group/page.mdx
+++ b/docs-ui/src/app/components/radio-group/page.mdx
@@ -10,7 +10,14 @@ import {
   validationSnippet,
   readOnlySnippet,
 } from './snippets';
-import { Default, Horizontal, Disabled, DisabledSingle, Validation, ReadOnly } from './components';
+import {
+  Default,
+  Horizontal,
+  Disabled,
+  DisabledSingle,
+  Validation,
+  ReadOnly,
+} from './components';
 import { PageTitle } from '@/components/PageTitle';
 import { Theming } from '@/components/Theming';
 import { ChangelogComponent } from '@/components/ChangelogComponent';
