--- a/docs-ui/src/app/components/select/page.mdx
+++ b/docs-ui/src/app/components/select/page.mdx
@@ -1,7 +1,17 @@
 import { PropsTable } from '@/components/PropsTable';
 import { Snippet } from '@/components/Snippet';
 import { CodeBlock } from '@/components/CodeBlock';
-import { Preview, WithLabelAndDescription, Sizes, WithIcon, Disabled, DisabledOption, Searchable, MultipleSelection, SearchableMultiple } from './components';
+import {
+  Preview,
+  WithLabelAndDescription,
+  Sizes,
+  WithIcon,
+  Disabled,
+  DisabledOption,
+  Searchable,
+  MultipleSelection,
+  SearchableMultiple,
+} from './components';
 import { selectPropDefs } from './props-definition';
 import {
   selectUsageSnippet,
