--- a/docs-ui/src/app/components/toggle-button/page.mdx
+++ b/docs-ui/src/app/components/toggle-button/page.mdx
@@ -49,13 +49,7 @@ import { ToggleButtonDefinition } from '../../../utils/definitions';
 
 ### Sizes
 
-<Snippet
-  align="center"
-  py={4}
-  open
-  preview={<Sizes />}
-  code={sizesSnippet}
-/>
+<Snippet align="center" py={4} open preview={<Sizes />} code={sizesSnippet} />
 
 ### Disabled
 
