--- a/docs-ui/src/app/components/menu/page.mdx
+++ b/docs-ui/src/app/components/menu/page.mdx
@@ -1,7 +1,17 @@
 import { PropsTable } from '@/components/PropsTable';
 import { Snippet } from '@/components/Snippet';
 import { CodeBlock } from '@/components/CodeBlock';
-import { Preview, PreviewSubmenu, PreviewIcons, PreviewLinks, PreviewSections, PreviewSeparators, PreviewAutocompleteMenu, PreviewAutocompleteListbox, PreviewAutocompleteListboxMultiple } from './components';
+import {
+  Preview,
+  PreviewSubmenu,
+  PreviewIcons,
+  PreviewLinks,
+  PreviewSections,
+  PreviewSeparators,
+  PreviewAutocompleteMenu,
+  PreviewAutocompleteListbox,
+  PreviewAutocompleteListboxMultiple,
+} from './components';
 import {
   menuTriggerPropDefs,
   submenuTriggerPropDefs,
@@ -36,12 +46,7 @@ import { MenuDefinition } from '../../../utils/definitions';
   description="A list of actions in a dropdown, enhanced with keyboard navigation."
 />
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Preview />}
-  code={preview}
-/>
+<Snippet align="center" py={4} preview={<Preview />} code={preview} />
 
 ## Usage
 
@@ -152,26 +157,14 @@ the submenu is displayed in the correct position. The best practice is to use th
 
 You can use the `iconStart` prop to add an icon to the menu item.
 
-<Snippet
-  align="center"
-  py={4}
-  open
-  preview={<PreviewIcons />}
-  code={icons}
-/>
+<Snippet align="center" py={4} open preview={<PreviewIcons />} code={icons} />
 
 ### With links
 
 You can use the `href` prop to add a link to the menu item. This is using our router provider under the hood
 to work for both internal and external links.
 
-<Snippet
-  align="center"
-  py={4}
-  open
-  preview={<PreviewLinks />}
-  code={links}
-/>
+<Snippet align="center" py={4} open preview={<PreviewLinks />} code={links} />
 
 ### With sections
 
