--- a/docs-ui/src/app/components/skeleton/page.mdx
+++ b/docs-ui/src/app/components/skeleton/page.mdx
@@ -2,11 +2,7 @@ import { PropsTable } from '@/components/PropsTable';
 import { Snippet } from '@/components/Snippet';
 import { CodeBlock } from '@/components/CodeBlock';
 import { skeletonPropDefs } from './props-definition';
-import {
-  skeletonUsageSnippet,
-  demo1Snippet,
-  demo2Snippet,
-} from './snippets';
+import { skeletonUsageSnippet, demo1Snippet, demo2Snippet } from './snippets';
 import { Demo1, Demo2 } from './components';
 import { PageTitle } from '@/components/PageTitle';
 import { Theming } from '@/components/Theming';
@@ -34,25 +30,13 @@ import { SkeletonDefinition } from '../../../utils/definitions';
 
 You can use a mix of different sizes to create a more complex skeleton.
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Demo1 />}
-  code={demo1Snippet}
-  open
-/>
+<Snippet align="center" py={4} preview={<Demo1 />} code={demo1Snippet} open />
 
 ### Demo 2
 
 You can use a mix of different sizes to create a more complex skeleton.
 
-<Snippet
-  align="center"
-  py={4}
-  preview={<Demo2 />}
-  code={demo2Snippet}
-  open
-/>
+<Snippet align="center" py={4} preview={<Demo2 />} code={demo2Snippet} open />
 
 <Theming definition={SkeletonDefinition} />
 
