--- a/docs-ui/src/app/components/text/page.mdx
+++ b/docs-ui/src/app/components/text/page.mdx
@@ -21,11 +21,7 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
   description="The `Text` component is used to display content on your page."
 />
 
-<Snippet
-  py={4}
-  preview={<Default />}
-  code={defaultSnippet}
-/>
+<Snippet py={4} preview={<Default />} code={defaultSnippet} />
 
 ## Usage
 
@@ -42,43 +38,27 @@ import { ChangelogComponent } from '@/components/ChangelogComponent';
 The `Text` component has a `variant` prop that can be used to change the
 appearance of the text.
 
-<Snippet
-  open
-  preview={<Variants />}
-  code={variantsSnippet}
-/>
+<Snippet open preview={<Variants />} code={variantsSnippet} />
 
 ### All weights
 
 The `Text` component has a `weight` prop that can be used to change the
 appearance of the text.
 
-<Snippet
-  open
-  preview={<Weights />}
-  code={weightsSnippet}
-/>
+<Snippet open preview={<Weights />} code={weightsSnippet} />
 
 ### All colors
 
 The `Text` component has a `color` prop that can be used to change the
 appearance of the text.
 
-<Snippet
-  open
-  preview={<Colors />}
-  code={colorsSnippet}
-/>
+<Snippet open preview={<Colors />} code={colorsSnippet} />
 
 ### Truncate
 
 The `Text` component has a `truncate` prop that can be used to truncate the text.
 
-<Snippet
-  open
-  preview={<Truncate />}
-  code={truncateSnippet}
-/>
+<Snippet open preview={<Truncate />} code={truncateSnippet} />
 
 <Theming definition={TextDefinition} />
 
